# web-sw-cor24-pascal

./: CHANGES.md  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.agentrail/: saga.toml
.agentrail/sessions/: ec29afff-e07c-4dca-aaf2-405675ed889c.jsonl
.agentrail/steps/006-006-live-compilation/: prompt.md  step.toml  summary.md
.github/workflows/: pages.yml
asm/: pvm.s
demos/: bst.pas  bst.spc  button_led.pas  button_led.spc  case_stmt.pas  case_stmt.spc  collatz.spc  countdown.spc  echo.pas  echo.spc  evenodd.pas  evenodd.spc  exit_search.pas  exit_search.spc  factorial.pas  factorial.spc  fibonacci.spc  forward_decl.pas  forward_decl.spc  hello.pas  hello.spc  led_on.spc  linked_list.pas  linked_list.spc  nested_procs.pas  nested_procs.spc  powers.pas  powers.spc  primes.spc  repeat_until.pas  repeat_until.spc  stdlib.pas  stdlib.spc  write.pas  write.spc
pages/: app-809b8a7d50fa7ae3.css  app-97212bac4cbf420e.css  index.html  web-p24c-1f00a960b56ef512_bg.wasm  web-p24c-59d8b6e030234c41_bg.wasm  web-p24c-c8a724373824f496.js  web-p24c-c8a724373824f496_bg.wasm  web-p24c-f60e9f4dbd74ed9f.js  web-p24c-f60e9f4dbd74ed9f_bg.wasm  web-p24c-fccea74fb6e8d70d.js  web-p24c-fccea74fb6e8d70d_bg.wasm  web-sw-cor24-pascal-2e7d3b30e4e81fb8_bg.wasm  web-sw-cor24-pascal-576db9c56338af77.js  web-sw-cor24-pascal-576db9c56338af77_bg.wasm  web-sw-cor24-pascal-f0b5f0b312e6f693.js  web-sw-cor24-pascal-f0b5f0b312e6f693_bg.wasm
scripts/: build-pages.sh  deploy.sh  serve.sh
src/: app.css  config.rs  demos.rs  lib.rs  main.rs
