[package]
name = "web-sw-cor24-pascal"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based Pascal Demos for COR24"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }
pa24r = { path = "../sw-cor24-pcode/assembler" }
pl24r = { path = "../sw-cor24-pcode/linker" }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlTextAreaElement", "HtmlInputElement", "HtmlSelectElement", "HtmlElement", "KeyboardEvent"] }
gloo = "0.11"
console_error_panic_hook = "0.1"

[build-dependencies]
cor24-emulator = { path = "../sw-cor24-emulator", default-features = false }

[profile.release]
opt-level = "z"
lto = true
